# satoidc

./: .gitignore  LICENSE  README.md  compose.yaml
examples/: README.md  basic_client.py  public_client.py
satoidc/: DockerFile  entrypoint.sh  pyproject.toml
satoidc/migrations/: env.py
satoidc/migrations/versions/: 32a836ab058b_create_initial_tables.py
satoidc/satoidc/: __init__.py  enums.py  settings.py  utils.py  validators.py
satoidc/satoidc/auth/: lnurl.py  lnurl_schemas.py  middleware.py  oauth2.py  security.py
satoidc/satoidc/fastapi_oauth2/: __init__.py  authorization_server.py  requests.py  resource_protector.py
satoidc/satoidc/models/: __init__.py  database.py
satoidc/satoidc/routes/: authorize.py  create_client.py  home.py  lnurl_auth.py  login.py  oauth2.py  register.py
satoidc/setup_wizard/: __main__.py  get_root.py  routes.py
