[project]
name = "satoidc"
version = "0.1.0"
description = ""
authors = [
    {name = "Lucas Santos Silva",email = "luss1010@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11,<4.0"
dependencies = [
    "fastapi[standard] (>=0.129.0,<0.130.0)",
    "authlib (>=1.6.8,<2.0.0)",
    "alembic (>=1.18.4,<2.0.0)",
    "pwdlib[argon2] (>=0.3.0,<0.4.0)",
    "aiosqlite (>=0.22.1,<0.23.0)",
    "psycopg[binary] (>=3.3.2,<4.0.0)",
    "sqlalchemy[asyncio] (>=2.0.46,<3.0.0)",
    "ecdsa (>=0.19.1,<0.20.0)",
    "bech32 (>=1.2.0,<2.0.0)",
    "pydantic-settings (>=2.13.0,<3.0.0)",
    "nicegui (>=3.7.1,<4.0.0)",
    "segno (>=1.6.6,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
taskipy = "^1.14.1"
pytest = "^9.0.2"
pytest-cov = "^7.0.0"
pytest-asyncio = "^1.3.0"

[tool.pytest.ini_options]
pythonpath = "."
addopts = '-p no:warnings'
asyncio_default_fixture_loop_scope = 'function'

[tool.taskipy.tasks]
run = 'fastapi dev iam'
test = 'pytest -s -x --cov=iam -vv'
post_test = 'coverage html'
